fixed overflow issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,8 +33,10 @@ a {
 ul {
   list-style: none;
 }
-
 .container {
+  width: 100%;
+}
+.box {
   display: flex;
 }
 main {
@@ -69,42 +71,14 @@ section > h2 {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.theme-btn {
-  z-index: 6000;
-  border: none;
-  position: fixed;
-  bottom: 2rem;
-  right: 2rem;
-  border-radius: 50%;
-  height: 3rem;
-  width: 3rem;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  cursor: pointer;
-}
-.theme-btn:hover {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
 .dark-icon {
   display: none;
 }
-.menu-btn {
-  display: none;
+.theme-toggle-button {
   position: fixed;
-  top: 1rem;
-  left: 1.5rem;
-  border: none;
-  display: none;
-  height: 3rem;
-  width: 3rem;
-  border-radius: 50%;
-  font-size: 1.3rem;
-  z-index: 9000;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  z-index: 20000;
 }
 @media only screen and (max-width: 600px) {
   body {
@@ -115,12 +89,7 @@ section > h2 {
     height: auto; */
     padding: 3rem 2rem;
   }
-  .menu-btn {
-    display: block;
-  }
-  .theme-btn {
-    top: 1rem;
-    right: 1.5rem;
-    bottom: auto;
+  .theme-toggle-button {
+    display: none;
   }
 }
